--- a/index.html
+++ b/index.html
@@ -115,11 +115,48 @@
         <section class="section">
             <div class="container">
                 <h2 class="section-title">Постоянные клиенты</h2>
-                <ul>
-                    <li>
-                        <svg>
-                            <use href="./images/symbol-defs-1.svg#icon-Client-1"></use>
-                        </svg>
+                <ul class="section-clients">
+                    <li class="section-clients-item">
+                        <a href="#" class="client-link">
+                            <svg class="client-icon">
+                                <use href="./images/sprite.svg#icon-Client-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="section-clients-item">
+                        <a href="#" class="client-link">
+                            <svg class="client-icon">
+                                <use href="./images/sprite.svg#icon-Client-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="section-clients-item">
+                        <a href="#" class="client-link">
+                            <svg class="client-icon">
+                                <use href="./images/sprite.svg#icon-Client-3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="section-clients-item">
+                        <a href="#" class="client-link">
+                            <svg class="client-icon">
+                                <use href="./images/sprite.svg#icon-Client-4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="section-clients-item">
+                        <a href="#" class="client-link">
+                            <svg class="client-icon">
+                                <use href="./images/sprite.svg#icon-Client-5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="section-clients-item">
+                        <a href="#" class="client-link">
+                            <svg class="client-icon">
+                                <use href="./images/sprite.svg#icon-Client-6"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
