--- a/index.html
+++ b/index.html
@@ -85,13 +85,74 @@
                         <div class="section-team-item">
                             <h3 class="section-team-title">Игорь Демьяненко</h3>
                             <p class="section-team-text">Product Designer</p>
+                            <ul class="section-link">
+                            <li class="team-link">
+                                <a href="" class="link-item">
+                                    <svg class="team-icon">
+                                        <use href="./images/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team-link">
+                                <a href="" class="link-item">
+                                    <svg class="team-icon">
+                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team-link">
+                                <a href="" class="link-item">
+                                    <svg class="team-icon">
+                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team-link">
+                                <a href="" class="link-item">
+                                    <svg class="team-icon">
+                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                         </div>
+                            
                     </li>
                     <li class="team-item">
                         <img src="./images/ОльгаРепина.jpg" alt="Ольга Репина" width="270" height="260">
                         <div class="section-team-item">
                             <h3 class="section-team-title">Ольга Репина</h3>
                             <p class="section-team-text">Frontend Developer</p>
+                            <ul class="section-link">
+                                <li class="team-link">
+                                    <a href="" class="link-item">
+                                        <svg class="team-icon">
+                                            <use href="./images/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-link">
+                                    <a href="" class="link-item">
+                                        <svg class="team-icon">
+                                            <use href="./images/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-link">
+                                    <a href="" class="link-item">
+                                        <svg class="team-icon">
+                                            <use href="./images/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-link">
+                                    <a href="" class="link-item">
+                                        <svg class="team-icon">
+                                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -99,6 +160,36 @@
                         <div class="section-team-item">
                             <h3 class="section-team-title">Николай Тарасов</h3>
                             <p class="section-team-text">Marketing</p>
+                            <ul class="section-link">
+                                <li class="team-link">
+                                    <a href="" class="link-item">
+                                        <svg class="team-icon">
+                                            <use href="./images/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-link">
+                                    <a href="" class="link-item">
+                                        <svg class="team-icon">
+                                            <use href="./images/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-link">
+                                    <a href="" class="link-item">
+                                        <svg class="team-icon">
+                                            <use href="./images/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-link">
+                                    <a href="" class="link-item">
+                                        <svg class="team-icon">
+                                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -106,6 +197,36 @@
                         <div class="section-team-item">
                             <h3 class="section-team-title">Михаил Ермаков</h3>
                             <p class="section-team-text">UI Designer</p>
+                            <ul class="section-link">
+                                <li class="team-link">
+                                    <a href="" class="link-item">
+                                        <svg class="team-icon">
+                                            <use href="./images/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-link">
+                                    <a href="" class="link-item">
+                                        <svg class="icon">
+                                            <use href="./images/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-link">
+                                    <a href="" class="link-item">
+                                        <svg class="team-icon">
+                                            <use href="./images/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-link">
+                                    <a href="" class="link-item">
+                                        <svg class="team-icon">
+                                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
@@ -165,16 +286,53 @@
     <!-- Подвал сайта -->
     <footer class="footer">
         <div class="container">
-            <a href="" class="logo footer-logo">
-                <span class="footer-logo-web">Web</span><span class="footer-logo-studio">Studio</span>
-            </a>
-            <address>
-                <ul class="address">
-                    <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
-                    <li class="address-item"><a href="mailto:info@example.com " class="address-link">info@example.com</a></li>
-                    <li class="address-item"><a href="tel:+380991111111" class="address-link">+38 099 111 11 11</a></li>
-                </ul>
-            </address>
+            <div class="footer-box">
+                <div class="address-box">
+                    <a href="" class="logo footer-logo">
+                        <span class="footer-logo-web">Web</span><span class="footer-logo-studio">Studio</span>
+                    </a>
+                    <address>
+                        <ul class="address">
+                            <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
+                            <li class="address-item"><a href="mailto:info@example.com " class="address-link">info@example.com</a></li>
+                            <li class="address-item"><a href="tel:+380991111111" class="address-link">+38 099 111 11 11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="socials-box">
+                    <h2 class="socials-box-title">Присоеденяйтесь</h2>
+                    <ul class="socials-box-link">
+                        <li class="socials-box-item" >
+                            <a href="" class="link-item">
+                                <svg href="./images/sprite.svg/#icon-instagram" class="box-icon">
+                                    <use ></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="socials-box-item">
+                            <a href="" class="link-item">
+                                <svg href="./images/sprite.svg/#icon-instagram" class="icon">
+                                    <use></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="socials-box-item">
+                            <a href="" class="link-item">
+                                <svg href="./images/sprite.svg/#icon-instagram" class="icon">
+                                    <use></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="socials-box-item">
+                            <a href="" class="link-item">
+                                <svg href="./images/sprite.svg/#icon-instagram" class="icon">
+                                    <use></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
