--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 </ul>
             </nav>
             <ul class="auth-nav">
-                <li class="auth-nav-item"><a href="mailto:info@devstudio.com" class="auth-nav-link">info@devstudio.com</a>
+                <li class="auth-nav-item">
+                    <a href="mailto:info@devstudio.com" class="auth-nav-link">
+                        info@devstudio.com</a>
                 </li>
                 <li class="auth-nav-item"><a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a></li>
             </ul>
@@ -88,29 +90,29 @@
                             <ul class="section-link">
                             <li class="team-link">
                                 <a href="" class="link-item">
-                                    <svg class="team-icon">
-                                        <use href="./images/sprite.svg#icon-instagram"></use>
+                                    <svg class="team-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-link">
                                 <a href="" class="link-item">
-                                    <svg class="team-icon">
-                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                    <svg class="team-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-link">
                                 <a href="" class="link-item">
-                                    <svg class="team-icon">
-                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                    <svg class="team-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-link">
                                 <a href="" class="link-item">
-                                    <svg class="team-icon">
-                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                    <svg class="team-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -126,29 +128,29 @@
                             <ul class="section-link">
                                 <li class="team-link">
                                     <a href="" class="link-item">
-                                        <svg class="team-icon">
-                                            <use href="./images/sprite.svg#icon-instagram"></use>
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-link">
                                     <a href="" class="link-item">
-                                        <svg class="team-icon">
-                                            <use href="./images/sprite.svg#icon-twitter"></use>
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-link">
                                     <a href="" class="link-item">
-                                        <svg class="team-icon">
-                                            <use href="./images/sprite.svg#icon-facebook"></use>
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-link">
                                     <a href="" class="link-item">
-                                        <svg class="team-icon">
-                                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -163,29 +165,29 @@
                             <ul class="section-link">
                                 <li class="team-link">
                                     <a href="" class="link-item">
-                                        <svg class="team-icon">
-                                            <use href="./images/sprite.svg#icon-instagram"></use>
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-link">
                                     <a href="" class="link-item">
-                                        <svg class="team-icon">
-                                            <use href="./images/sprite.svg#icon-twitter"></use>
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-link">
                                     <a href="" class="link-item">
-                                        <svg class="team-icon">
-                                            <use href="./images/sprite.svg#icon-facebook"></use>
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-link">
                                     <a href="" class="link-item">
-                                        <svg class="team-icon">
-                                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -200,29 +202,29 @@
                             <ul class="section-link">
                                 <li class="team-link">
                                     <a href="" class="link-item">
-                                        <svg class="team-icon">
-                                            <use href="./images/sprite.svg#icon-instagram"></use>
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-link">
                                     <a href="" class="link-item">
-                                        <svg class="icon">
-                                            <use href="./images/sprite.svg#icon-twitter"></use>
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-link">
                                     <a href="" class="link-item">
-                                        <svg class="team-icon">
-                                            <use href="./images/sprite.svg#icon-facebook"></use>
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-link">
                                     <a href="" class="link-item">
-                                        <svg class="team-icon">
-                                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        <svg class="team-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -239,43 +241,43 @@
                 <ul class="section-clients">
                     <li class="section-clients-item">
                         <a href="#" class="client-link">
-                            <svg class="client-icon">
-                                <use href="./images/sprite.svg#icon-Client-1"></use>
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-Client-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="section-clients-item">
                         <a href="#" class="client-link">
-                            <svg class="client-icon">
-                                <use href="./images/sprite.svg#icon-Client-2"></use>
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-Client-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="section-clients-item">
                         <a href="#" class="client-link">
-                            <svg class="client-icon">
-                                <use href="./images/sprite.svg#icon-Client-3"></use>
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-Client-3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="section-clients-item">
                         <a href="#" class="client-link">
-                            <svg class="client-icon">
-                                <use href="./images/sprite.svg#icon-Client-4"></use>
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-Client-4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="section-clients-item">
                         <a href="#" class="client-link">
-                            <svg class="client-icon">
-                                <use href="./images/sprite.svg#icon-Client-5"></use>
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-Client-5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="section-clients-item">
                         <a href="#" class="client-link">
-                            <svg class="client-icon">
-                                <use href="./images/sprite.svg#icon-Client-6"></use>
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-Client-6"></use>
                             </svg>
                         </a>
                     </li>
@@ -285,12 +287,11 @@
     </main>
     <!-- Подвал сайта -->
     <footer class="footer">
-        <div class="container">
-            <div class="footer-box">
-                <div class="address-box">
-                    <a href="" class="logo footer-logo">
-                        <span class="footer-logo-web">Web</span><span class="footer-logo-studio">Studio</span>
-                    </a>
+        <div class="container footer-box">
+            <div class="address-box">
+                <a href="" class="logo footer-logo">
+                    <span class="footer-logo-web">Web</span><span class="footer-logo-studio">Studio</span>
+                </a>
                     <address>
                         <ul class="address">
                             <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
@@ -298,41 +299,40 @@
                             <li class="address-item"><a href="tel:+380991111111" class="address-link">+38 099 111 11 11</a></li>
                         </ul>
                     </address>
-                </div>
-                <div class="socials-box">
-                    <h2 class="socials-box-title">Присоеденяйтесь</h2>
-                    <ul class="socials-box-link">
-                        <li class="socials-box-item" >
-                            <a href="" class="link-item">
-                                <svg href="./images/sprite.svg/#icon-instagram" class="box-icon">
-                                    <use ></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="socials-box-item">
-                            <a href="" class="link-item">
-                                <svg href="./images/sprite.svg/#icon-instagram" class="icon">
-                                    <use></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="socials-box-item">
-                            <a href="" class="link-item">
-                                <svg href="./images/sprite.svg/#icon-instagram" class="icon">
-                                    <use></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="socials-box-item">
-                            <a href="" class="link-item">
-                                <svg href="./images/sprite.svg/#icon-instagram" class="icon">
-                                    <use></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+             </div>
+             <div class="socials-box">
+                 <h2 class="socials-box-title">Присоеденяйтесь</h2>
+                 <ul class="socials-box-item">
+                    <li class="socials-box-link">
+                        <a href="" class="link-item socials-item">
+                            <svg class="icon-item" width="20" height="20"> 
+                                <use href="./images/icons.svg#icon-instagram" class="icon"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="socials-box-link">
+                        <a href="" class="link-item socials-item">
+                            <svg class="icon-item" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter" class="icon"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="socials-box-link">
+                        <a href="" class="link-item socials-item">
+                            <svg class="icon-item" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook" class="icon"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="socials-box-link">
+                        <a href="" class="link-item socials-item">
+                            <svg class="icon-item" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin" class="icon"></use>
+                            </svg>
+                        </a>
+                    </li>
+                 </ul>
+             </div>       
         </div>
     </footer>
 </body>
