--- a/index.html
+++ b/index.html
@@ -26,10 +26,22 @@
             </nav>
             <ul class="auth-nav">
                 <li class="auth-nav-item">
+                    <a href="" class="auth-nav-link-svg"  width="16" height="12">
+                        <svg class="auth-nav-svg" width="16" height="12">
+                            <use href="./images/icons.svg#icon-envelope" class="auth-nav-icon"></use>
+                        </svg>
+                    </a>
                     <a href="mailto:info@devstudio.com" class="auth-nav-link">
                         info@devstudio.com</a>
                 </li>
-                <li class="auth-nav-item"><a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a></li>
+                <li class="auth-nav-item">
+                    <a href="" class="auth-nav-link-svg  phone" width="10" height="16">
+                        <svg class="auth-nav-svg" width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone" class="auth-nav-icon"></use>
+                        </svg>
+                    </a>
+                    <a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a>
+                </li>
             </ul>
         </div>
     </header>
