--- a/portfolio.html
+++ b/portfolio.html
@@ -27,10 +27,24 @@
           </ul>
         </nav>
         <ul class="auth-nav">
-          <li class="auth-nav-item"><a href="mailto:info@devstudio.com" class="auth-nav-link">info@devstudio.com</a></li>
-          <li class="auth-nav-item"><a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a></li>
+          <li class="auth-nav-item">
+            <a href="" class="auth-nav-link-svg" width="16" height="12">
+              <svg class="auth-nav-svg" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope" class="auth-nav-icon"></use>
+              </svg>
+            </a>
+            <a href="mailto:info@devstudio.com" class="auth-nav-link">
+              info@devstudio.com</a>
+          </li>
+          <li class="auth-nav-item">
+            <a href="" class="auth-nav-link-svg  phone" width="10" height="16">
+              <svg class="auth-nav-svg" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone" class="auth-nav-icon"></use>
+              </svg>
+            </a>
+            <a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a>
+          </li>
         </ul>
-    
       </div>
     </header>
     <!-- Основная часть -->
@@ -205,17 +219,52 @@
     </main>
       <!-- Подвал сайта -->
       <footer class="footer">
-        <div class="container">
-          <a href="" class="logo footer-logo">
-            <span class="footer-logo-web">Web</span><span class="footer-logo-studio">Studio</span>
-          </a>
-          <address>
-            <ul class="address">
-              <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
-              <li class="address-item"><a href="mailto:info@example.com " class="address-link">info@example.com</a></li>
-              <li class="address-item"><a href="tel:+380991111111" class="address-link">+38 099 111 11 11</a></li>
+        <div class="container footer-box">
+          <div class="address-box">
+            <a href="" class="logo footer-logo">
+              <span class="footer-logo-web">Web</span><span class="footer-logo-studio">Studio</span>
+            </a>
+            <address>
+              <ul class="address">
+                <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
+                <li class="address-item"><a href="mailto:info@example.com " class="address-link">info@example.com</a></li>
+                <li class="address-item"><a href="tel:+380991111111" class="address-link">+38 099 111 11 11</a></li>
+              </ul>
+            </address>
+          </div>
+          <div class="socials-box">
+            <h2 class="socials-box-title">Присоеденяйтесь</h2>
+            <ul class="socials-box-item">
+              <li class="socials-box-link">
+                <a href="" class="link-item socials-item">
+                  <svg class="icon-item" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram" class="icon"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-box-link">
+                <a href="" class="link-item socials-item">
+                  <svg class="icon-item" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter" class="icon"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-box-link">
+                <a href="" class="link-item socials-item">
+                  <svg class="icon-item" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook" class="icon"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-box-link">
+                <a href="" class="link-item socials-item">
+                  <svg class="icon-item" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin" class="icon"></use>
+                  </svg>
+                </a>
+              </li>
             </ul>
-          </address>
+          </div>
         </div>
       </footer>
   </body>
