Добавляет icons.svg проекту

--- a/portfolio.html
+++ b/portfolio.html
@@ -217,55 +217,55 @@
         </div>
       </section>
     </main>
-      <!-- Подвал сайта -->
-      <footer class="footer">
-        <div class="container footer-box">
-          <div class="address-box">
-            <a href="" class="logo footer-logo">
-              <span class="footer-logo-web">Web</span><span class="footer-logo-studio">Studio</span>
-            </a>
-            <address>
-              <ul class="address">
-                <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
-                <li class="address-item"><a href="mailto:info@example.com " class="address-link">info@example.com</a></li>
-                <li class="address-item"><a href="tel:+380991111111" class="address-link">+38 099 111 11 11</a></li>
-              </ul>
-            </address>
-          </div>
-          <div class="socials-box">
-            <h2 class="socials-box-title">Присоеденяйтесь</h2>
-            <ul class="socials-box-item">
-              <li class="socials-box-link">
-                <a href="" class="link-item socials-item">
-                  <svg class="icon-item" width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram" class="icon"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="socials-box-link">
-                <a href="" class="link-item socials-item">
-                  <svg class="icon-item" width="20" height="20">
-                    <use href="./images/icons.svg#icon-twitter" class="icon"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="socials-box-link">
-                <a href="" class="link-item socials-item">
-                  <svg class="icon-item" width="20" height="20">
-                    <use href="./images/icons.svg#icon-facebook" class="icon"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="socials-box-link">
-                <a href="" class="link-item socials-item">
-                  <svg class="icon-item" width="20" height="20">
-                    <use href="./images/icons.svg#icon-linkedin" class="icon"></use>
-                  </svg>
-                </a>
-              </li>
+    <!-- Подвал сайта -->
+    <footer class="footer">
+      <div class="container footer-box">
+        <div class="address-box">
+          <a href="" class="logo footer-logo">
+            <span class="footer-logo-web">Web</span><span class="footer-logo-studio">Studio</span>
+          </a>
+          <address>
+            <ul class="address">
+              <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
+              <li class="address-item"><a href="mailto:info@example.com " class="address-link">info@example.com</a></li>
+              <li class="address-item"><a href="tel:+380991111111" class="address-link">+38 099 111 11 11</a></li>
             </ul>
-          </div>
+          </address>
         </div>
-      </footer>
+        <div class="socials-box">
+          <p class="socials-box-title">Присоеденяйтесь</p>
+          <ul class="socials-box-item">
+            <li class="socials-box-link">
+              <a href="" class="link-item socials-item">
+                <svg class="icon-item" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram-2" class="icon"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-box-link">
+              <a href="" class="link-item socials-item">
+                <svg class="icon-item" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter" class="icon"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-box-link">
+              <a href="" class="link-item socials-item">
+                <svg class="icon-item" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook" class="icon"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-box-link">
+              <a href="" class="link-item socials-item">
+                <svg class="icon-item" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin" class="icon"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
