--- a/index.html
+++ b/index.html
@@ -26,21 +26,19 @@
             </nav>
             <ul class="auth-nav">
                 <li class="auth-nav-item">
-                    <a href="" class="auth-nav-link-svg"  width="16" height="12">
+                    <a href="mailto:info@devstudio.com" class="auth-nav-link">
                         <svg class="auth-nav-svg" width="16" height="12">
                             <use href="./images/icons.svg#icon-envelope" class="auth-nav-icon"></use>
                         </svg>
-                    </a>
-                    <a href="mailto:info@devstudio.com" class="auth-nav-link">
-                        info@devstudio.com</a>
+                        <span>info@devstudio.com</span></a>
                 </li>
                 <li class="auth-nav-item">
-                    <a href="" class="auth-nav-link-svg  phone" width="10" height="16">
+                    <a href="tel:+380961111111" class="auth-nav-link">
                         <svg class="auth-nav-svg" width="10" height="16">
                             <use href="./images/icons.svg#icon-smartphone" class="auth-nav-icon"></use>
                         </svg>
+                        <span>+38 096 111 11 11</span>
                     </a>
-                    <a href="tel:+380961111111" class="auth-nav-link">+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -60,18 +58,38 @@
                 <h2 class="section-title visually-hidden">Почему мы</h2>
                 <ul class="features">
                     <li class="feature-item">
+                        <div class="feature-svg">
+                            <svg class="item-svg" width="70" height="70">
+                                <use href="./images/icons.svg#icon-antenna-1" class="icon-feature"></use>
+                            </svg>
+                        </div>
                             <h3 class="feature-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                         <p class="feature-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="feature-item">
+                        <div class="feature-svg">
+                            <svg class="item-svg" width="70" height="70">
+                                <use href="./images/icons.svg#icon-clock-2" class="icon-feature"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">ПУНКТУАЛЬНОСТЬ</h3>
                         <p class="feature-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="feature-item">
+                        <div class="feature-svg">
+                            <svg class="item-svg" width="70" height="70">
+                                <use href="./images/icons.svg#icon-diagram-3" class="icon-feature"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">ПЛАНИРОВАНИЕ</h3>
                         <p class="feature-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="feature-item">
+                        <div class="feature-svg">
+                        <svg class="item-svg" width="70" height="70">
+                            <use href="./images/icons.svg#icon-astronaut-4" class="icon-feature"></use>
+                        </svg>
+                        </div>
                         <h3 class="feature-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                         <p class="feature-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -103,7 +121,7 @@
                             <li class="team-link">
                                 <a href="" class="link-item">
                                     <svg class="team-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                        <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -141,7 +159,7 @@
                                 <li class="team-link">
                                     <a href="" class="link-item">
                                         <svg class="team-icon" width="20" height="20">
-                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -178,7 +196,7 @@
                                 <li class="team-link">
                                     <a href="" class="link-item">
                                         <svg class="team-icon" width="20" height="20">
-                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -215,7 +233,7 @@
                                 <li class="team-link">
                                     <a href="" class="link-item">
                                         <svg class="team-icon" width="20" height="20">
-                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -254,42 +272,42 @@
                     <li class="section-clients-item">
                         <a href="#" class="client-link">
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/icons.svg#icon-Client-1"></use>
+                                <use href="./images/icons.svg#icon-logo-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="section-clients-item">
                         <a href="#" class="client-link">
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/icons.svg#icon-Client-2"></use>
+                                <use href="./images/icons.svg#icon-logo-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="section-clients-item">
                         <a href="#" class="client-link">
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/icons.svg#icon-Client-3"></use>
+                                <use href="./images/icons.svg#icon-logo-3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="section-clients-item">
                         <a href="#" class="client-link">
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/icons.svg#icon-Client-4"></use>
+                                <use href="./images/icons.svg#icon-logo-4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="section-clients-item">
                         <a href="#" class="client-link">
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/icons.svg#icon-Client-5"></use>
+                                <use href="./images/icons.svg#icon-logo-5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="section-clients-item">
                         <a href="#" class="client-link">
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/icons.svg#icon-Client-6"></use>
+                                <use href="./images/icons.svg#icon-logo-6"></use>
                             </svg>
                         </a>
                     </li>
@@ -313,12 +331,12 @@
                     </address>
              </div>
              <div class="socials-box">
-                 <h2 class="socials-box-title">Присоеденяйтесь</h2>
+                 <p class="socials-box-title">Присоеденяйтесь</p>
                  <ul class="socials-box-item">
                     <li class="socials-box-link">
                         <a href="" class="link-item socials-item">
                             <svg class="icon-item" width="20" height="20"> 
-                                <use href="./images/icons.svg#icon-instagram" class="icon"></use>
+                                <use href="./images/icons.svg#icon-instagram-2" class="icon"></use>
                             </svg>
                         </a>
                     </li>
